[package]
name = "rest-api-postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = {version="1.0.201", features = ["derive"]}
serde_json = "1.0.117"
sqlx = {version="0.7.4", features = ["runtime-async-std-native-tls","postgres"]}
